<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wooden_bridge"
    tools:context=".MainActivity">


    <TableLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <TableRow>
            <EditText
                android:id="@+id/answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:maxLines="2"
                android:textSize="20sp"/>
        </TableRow>

        <TableRow>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/new_button"
                style="@style/button_start_style"
                android:text="@string/button_start" />


        </TableRow>

        <TableRow>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/one_button"
                android:text="@string/button_1"
                style="@style/button_style"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/two_button"
                android:text="@string/button_2"
                style="@style/button_style"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/three_button"
                android:text="@string/button_3"
                style="@style/button_style"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/min_button"
                android:text="@string/button_min"
                style="@style/button_style"/>

        </TableRow>

        <TableRow>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/four_button"
                android:text="@string/button_4"
                style="@style/button_style" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/five_button"
                android:text="@string/button_5"
                style="@style/button_style"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/six_button"
                android:text="@string/button_6"
                style="@style/button_style"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mul_button"
                android:text="@string/button_mult"
                style="@style/button_style"/>

        </TableRow>

        <TableRow>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/seven_button"
                android:text="@string/button_7"
                style="@style/button_style"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/eight_button"
                android:text="@string/button_8"
                style="@style/button_style"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nine_button"
                android:text="@string/button_9"
                style="@style/button_style"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/division_button"
                android:text="@string/button_div"
                style="@style/button_style"/>

        </TableRow>

        <TableRow>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/point_button"
                android:text="@string/button_point"
                style="@style/button_style"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/null_button"
                android:text="@string/button_0"
                style="@style/button_style"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sum_button"
                android:text="@string/button_sum"
                style="@style/button_style"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/equally_button"
                android:text="@string/button_equally"
                style="@style/button_style"/>

        </TableRow>


    </TableLayout>

</androidx.core.widget.NestedScrollView>